--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 .vs
-SmartHunter/bin/x64/Debug/*
+SmartHunter/bin/x64/*
 obj
 *.user
-
-!SmartHunter/bin/x64/Debug/SmartHunter.exe
-!SmartHunter/bin/x64/Debug/Newtonsoft.Json.dll
