Configurable Capture Data

--- a/SmartHunter/SmartHunter.csproj
+++ b/SmartHunter/SmartHunter.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Core\Data\WidgetContext.cs" />
     <Compile Include="Core\PointerTrace.cs" />
     <Compile Include="Core\PointerTraceLevel.cs" />
+    <Compile Include="Game\Config\CaptureDataConfig.cs" />
     <Compile Include="Game\Config\DebugConfig.cs" />
     <Compile Include="Game\Config\MemoryConfig.cs" />
     <Compile Include="Game\Config\MonsterCrownConfig.cs" />
